Call CutRow _before_ we release our reference to the nsIMdbRow.  Fixes crash on shift+delete.  Bug 258767, patch by jwalden@mit.edu, r=bryner.